Replace p tags with span in ajax-viewer panel headings to fix title alignment

--- a/viewer/css/ajax-viewer.css
+++ b/viewer/css/ajax-viewer.css
@@ -29,11 +29,6 @@
     padding: 3px;
     padding-left: 6px;
     border-bottom: 1px solid #f0f0f0;
-    display: flex;
-    align-items: center;
-}
-.ajax-sidebar-panel-heading p {
-    margin: 0;
 }
 .ajax-sidebar-panel-body {
     position: absolute;
